most of the visual bugs are fixed. some alignment issues on products page. this project is almost complete.

--- a/resources/css/about.css
+++ b/resources/css/about.css
@@ -17,6 +17,7 @@
   display: flex;
   justify-content: space-around;
   margin-bottom: 2.125rem;
+  padding: 2.125em;
 }
 
 .staff-member {
@@ -49,7 +50,11 @@
   font-size: .875rem;
 }
 
-@media screen and (min-width: 1170px) {
+@media screen and (max-width: 1170px) {
+  .staff-list {
+    flex-direction: column;
+  }
+
   .staff-member {
     flex-direction: row;
     padding: 1.5rem;
@@ -61,13 +66,12 @@
   }
 }
 
-@media screen and (min-width: 580px) {
+@media screen and (max-width: 580px) {
   #staff-section {
     padding: 0;
   }
 
   .staff-member {
     flex-direction: column;
-    padding-left: 0;
   }
 }
