--- a/resources/css/base.css
+++ b/resources/css/base.css
@@ -2,7 +2,15 @@
 
 html {
   font-family: "Roboto", sans-serif;
-  font-size: 16px; 
+  font-size: 16px;
+}
+
+body {
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
 }
 
 .main-content {
@@ -15,7 +23,7 @@ html {
 }
 
 .button {
-  background-color: #4a4a4a;
+  background-color: #4A4A4A;
   color: white;
 }
 
@@ -37,14 +45,18 @@ html {
 
 #header {
   position: fixed;
-  border-bottom: solid 1px #c6c1c1;
+  border-bottom: 1px solid #c6c1c1;
   background-color: white;
+  z-index: 10;
+  width: 100%;
+  top: 0;
+  height: 85px;
 }
 
 #header .content {
   display: flex;
   align-items: center;
-  padding: 1.875rem;
+  padding: 0.875rem 1.875rem;
 }
 
 #header .logo {
@@ -57,13 +69,14 @@ html {
 
 .navigation li {
   padding-left: 3.5rem;
+  list-style-type: none;
 }
 
 .navigation a {
   vertical-align: bottom;
   line-height: 1.6;
   font-size: 1rem;
-  color: #4a4a4a;
+  color: #4A4A4A;
 }
 
 .navigation a.active {
@@ -109,6 +122,7 @@ html {
     background-color: #9dc20b;
     line-height: 1.6;
     color: white;
+    border-radius: 4px;
   }
 }
 
