--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,16 +1,21 @@
 /* Sign Up Section */
 
+
 #sign-up-section {
   justify-content: flex-start;
   align-items: flex-start;
+  background: url("../images/banner-landingpage.jpg");
+  background-size: cover;
 }
 
 #sign-up-cta {
   position: relative;
-  top: 171px;
+  top: 170px;
   left: 10%;
-  padding: 0 5rem 2.5rem 5rem;
+  padding: 0 5rem 3.5rem;
   border-radius: 4px;
+  background: #9DC20A;
+  color: white;
 }
 
 #sign-up-cta .content {
@@ -21,11 +26,11 @@
   line-height: 1.4;
 }
 
-#sign-up-cta .h1 {
+#sign-up-cta h1 {
   font-size: 3.125rem;
 }
 
-#sign-up-cta .h2 {
+#sign-up-cta h2 {
   font-size: 2.25rem;
 }
 
@@ -35,16 +40,22 @@
 
 #sign-up-cta .cursive {
   font-family: "Damion", cursive;
+  margin-top: 32px;
+  margin-bottom: 0;
 }
 
 #sign-up-cta .striking {
   font-family: "Rubik", sans-serif;
   padding-bottom: .75rem;
+  margin: 0;
 }
 
 #sign-up-cta .button {
   margin-top: 1.625rem;
-  padding: 1.25rem 7.25rem;
+  background: #4A4A4A;
+  border-radius: 4px;
+  padding: 20px 0;
+  width: 408px;
 }
 
 @media only screen and (max-width: 760px) {
@@ -53,11 +64,12 @@
   }
 
   #sign-up-cta {
-    position: static;
+    position: relative;
     width: auto;
     height: auto;
     background-color: transparent;
     border: none;
+    left: 0;
   }
 
   #sign-up-cta .content {
@@ -96,42 +108,60 @@
   background-color: #f3f3f3;
 }
 
-feature {
+.feature {
   padding: 2rem;
   background-color: white;
+  height: 635px;
 }
 
-feature .image-container {
-  height: 65%;
+.feature:nth-child(1) {
+  margin: 0 19px 0 0;
+}
+
+.feature:nth-child(2) {
+  margin: 0 0 0 19px;
+}
+
+.feature .image-container {
   margin: 0 auto;
 }
 
-feature .content {
+.center > .image-container img {
+  height: 65%;
+  width: 90%;
+  margin: 0 auto;
+}
+
+.image-container img {
+  width: 100%;
+}
+.feature .content {
   padding: 2.5rem 0;
 }
 
-feature h2 {
+.feature h2 {
   padding-bottom: .5rem;
   font-size: 2.25rem;
   font-weight: bold;
-  color: #4a4a4a;
+  color: #4A4A4A;
+  line-height: 1.2;
 }
 
-feature h3 {
+.feature h3 {
   font-size: 1rem;
   line-height: 1.2;
   font-weight: 300;
-  color: #4a4a4a;
+  color: #4A4A4A;
 }
 
 @media only screen and (max-width: 890px) {
-  feature h2 {
+  .feature h2 {
     font-size: 1.125rem;
     line-height: 1.3;
     font-weight: normal;
   }
 
-  feature h3 {
+  .feature h3 {
     font-size: .875rem;
     line-height: 1.4;
   }
@@ -143,12 +173,17 @@ feature h3 {
     padding: 0;
   }
 
-  feature {
+  .feature:nth-child(1) {
+    margin: 0;
+    background: transparent;
+  }
+
+  .feature {
     margin: 0;
     padding: 1.25rem 1rem 0 1rem;
   }
 
-  feature .content {
+  .feature .content {
     padding: 1.25rem 0 1.875rem 0;
   }
 }
@@ -218,13 +253,14 @@ feature h3 {
 
 #quotes-section {
   background-color: #f3f3f3;
+  padding: 80px 0;
 }
 
 #quotes-section.content {
   padding: 5rem 0;
 }
 
-#quotes-section.quote {
+#quotes-section .quote {
   padding-right: 1.875rem;
   line-height: 1.1;
   font-style: italic;
